# LIG

./: .gitignore  .gitmodules  gaussianlig.py  imgui.ini  init_splats123.py  lig_renderer.py  minimal_trainer_upscale.py  progressive.py  progressive_module.py  train.py  upscaler_torch.py  utils.py  visualizer.py
gsplat2d/gsplat2d/: __init__.py  project_gaussians.py  project_gaussians_cholesky.py  rasterize.py  upscale.py  utils.py
gsplat2d/gsplat2d/cuda/: __init__.py
gsplat2d/gsplat2d/cuda/csrc/: CMakeLists.txt  backward.cu  backward.cuh  bindings.cu  bindings.h  ext.cpp  forward.cu  forward.cuh  gradient_aware_rasterizer.cu  gradient_aware_upscaler.cu  helpers.cuh  upscale.cuh
gui/: cmap_batlow.py  common.py  model_visualizers.py  sphere_visualizer.py  visualizer.py
gui/shaders/: colormap_lut.frag  eac_sphere.frag  equirect_sphere.frag  fullscreen.vert  gradient_lut.frag  texture.frag  upscale.frag
shaders/: colormap_lut.frag  fullscreen.vert  gradient.frag  magnitude.frag  magnitude_lut.frag  texture.frag  upscale.frag  viridis.frag
